test/src/fcusparse.h

typedef struct d_CSRGDeviceMat
{			
  cusparseMatDescr_t descr;
  cusparseSolveAnalysisInfo_t triang;
  int                 m, n, nz;
  double             *val;
  int                *irp;
  int                *ja;
} d_CSRGDeviceMat;
typedef struct s_CSRGDeviceMat
{			
  cusparseMatDescr_t descr;
  cusparseSolveAnalysisInfo_t triang;
  int                 m, n, nz;
  float              *val;
  int                *irp;
  int                *ja;
} s_CSRGDeviceMat;
/* Interoperability: type coming from Fortran side to distinguish D/S/C/Z. */
typedef struct s_Cmat
{
  s_CSRGDeviceMat *mat;
} s_Cmat;
typedef struct d_Cmat
{
  d_CSRGDeviceMat *mat;
} d_Cmat;
typedef struct s_HYBGDeviceMat
{			
  cusparseMatDescr_t descr;
  cusparseSolveAnalysisInfo_t triang;
  cusparseHybMat_t hybA;
  int                m, n, nz;
  float             *val;
  int               *irp;
  int               *ja;
} s_HYBGDeviceMat;
typedef struct d_HYBGDeviceMat
{			
  cusparseMatDescr_t descr;
  cusparseSolveAnalysisInfo_t triang;
  cusparseHybMat_t hybA;
  int                 m, n, nz;
  double             *val;
  int                *irp;
  int                *ja;
} d_HYBGDeviceMat;
/* Interoperability: type coming from Fortran side to distinguish D/S/C/Z. */
typedef struct s_Hmat
{
  s_HYBGDeviceMat *mat;
} s_Hmat;
typedef struct d_Hmat
{
  d_HYBGDeviceMat *mat;
} d_Hmat;
int FcusparseCreate(void **context);
int FcusparseDestroy(void **context);
int s_spmvCSRGDevice(s_Cmat *Mat, float alpha, void *deviceX, 
		     float beta, void *deviceY);
int s_spsvCSRGDevice(s_Cmat *Mat, float alpha, void *deviceX, 
		     float beta, void *deviceY);
int s_CSRGDeviceAlloc(s_Cmat *Mat,int nr, int nc, int nz);
int s_CSRGDeviceFree(s_Cmat *Mat);
int s_CSRGDeviceSetMatType(s_Cmat *Mat, int type);
int s_CSRGDeviceSetMatFillMode(s_Cmat *Mat, int type);
int s_CSRGDeviceSetMatDiagType(s_Cmat *Mat, int type);
int s_CSRGDeviceSetMatIndexBase(s_Cmat *Mat, int type);
int s_CSRGDeviceCsrsmAnalysis(s_Cmat *Mat);
int s_CSRGHost2Device(s_Cmat *Mat, int m, int n, int nz,
		      int *irp, int *ja, float *val);
int d_spmvCSRGDevice(d_Cmat *Mat, double alpha, void *deviceX, 
		     double beta, void *deviceY);
int d_spsvCSRGDevice(d_Cmat *Mat, double alpha, void *deviceX, 
		     double beta, void *deviceY);
int d_CSRGDeviceAlloc(d_Cmat *Mat,int nr, int nc, int nz);
int d_CSRGDeviceFree(d_Cmat *Mat);
int d_CSRGDeviceSetMatType(d_Cmat *Mat, int type);
int d_CSRGDeviceSetMatFillMode(d_Cmat *Mat, int type);
int d_CSRGDeviceSetMatDiagType(d_Cmat *Mat, int type);
int d_CSRGDeviceSetMatIndexBase(d_Cmat *Mat, int type);
int d_CSRGDeviceCsrsmAnalysis(d_Cmat *Mat);
int d_CSRGHost2Device(d_Cmat *Mat, int m, int n, int nz,
		      int *irp, int *ja, double *val);